--- a/package.json
+++ b/package.json
@@ -22,42 +22,42 @@
     "@angular/compiler": "^9.1.9",
     "@angular/core": "^9.1.9",
     "@angular/forms": "^9.1.9",
-    "@angular/http": "^5.2.4",
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/platform-server": "^9.1.9",
     "@angular/router": "^9.1.9",
-    "@nestjs/common": "^4.5.9",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/microservices": "^4.5.8",
-    "@nestjs/testing": "^4.4.0",
-    "@nestjs/websockets": "^4.5.8",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
-    "copy-webpack-plugin": "^4.4.1",
-    "core-js": "^2.4.1",
-    "dotenv": "^4.0.0",
+    "@nestjs/common": "^7.1.0",
+    "@nestjs/core": "^7.1.0",
+    "@nestjs/microservices": "^7.1.0",
+    "@nestjs/testing": "^7.1.0",
+    "@nestjs/websockets": "^7.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
+    "copy-webpack-plugin": "^6.0.1",
+    "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "ng-socket-io": "^0.2.4",
     "rxjs": "^6.5.5",
-    "webpack-node-externals": "^1.6.0",
+    "tslib": "^2.0.0",
+    "webpack-node-externals": "^1.7.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^9.1.9",
-    "@types/dotenv": "^4.0.2",
-    "@types/express": "^4.11.1",
-    "@types/node": "^6.0.100",
-    "codelyzer": "^4.1.0",
-    "concurrently": "^3.5.1",
-    "nodemon": "^1.14.12",
-    "prettier": "^1.12.1",
-    "pretty-quick": "^1.4.1",
-    "protractor": "~5.1.2",
-    "ts-loader": "^3.5.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "tslint-sonarts": "^1.6.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.5",
+    "codelyzer": "^5.2.2",
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "protractor": "^7.0.0",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.1",
+    "tslint": "^6.1.2",
+    "tslint-sonarts": "^1.9.0",
     "typescript": "~3.8.3"
   },
   "prettier": {
