--- a/package.json
+++ b/package.json
@@ -26,20 +26,23 @@
     "@angular/platform-browser-dynamic": "^9.1.9",
     "@angular/platform-server": "^9.1.9",
     "@angular/router": "^9.1.9",
+    "@fixer.ru/log": "^2.0.1",
     "@nestjs/common": "^7.1.0",
     "@nestjs/core": "^7.1.0",
     "@nestjs/microservices": "^7.1.0",
-    "@nestjs/testing": "^7.1.0",
+    "@nestjs/platform-express": "^7.1.0",
+    "@nestjs/platform-socket.io": "^7.1.0",
     "@nestjs/websockets": "^7.1.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "copy-webpack-plugin": "^6.0.1",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
-    "ng-socket-io": "^0.2.4",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^1.10.0",
+    "tslint-config-prettier": "^1.18.0",
     "webpack-node-externals": "^1.7.2",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
@@ -48,8 +51,8 @@
     "@angular/language-service": "^9.1.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
-    "@types/node": "^14.0.5",
-    "codelyzer": "^5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
@@ -58,7 +61,6 @@
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
-    "tslint-sonarts": "^1.9.0",
     "typescript": "~3.8.3"
   },
   "prettier": {
